--- a/uitest/calc/CalcTest/WpfApp1/App.xaml
+++ b/uitest/calc/CalcTest/WpfApp1/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfApp1"
-             StartupUri="Views/ParrtsTestView.xaml" >
+             StartupUri="Views/CalcTestView.xaml" >
     <Application.Resources>
          
     </Application.Resources>
