--- a/uitest/calc/CalcTest/CS_Calculator/CS_CalculatorControl.xaml
+++ b/uitest/calc/CalcTest/CS_Calculator/CS_CalculatorControl.xaml
@@ -5,20 +5,21 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CS_Calculator"
              mc:Ignorable="d" 
-			 FontSize="12"
-			 Height="Auto"
-			d:DesignWidth="260" 
 			 FocusManager.FocusedElement="{Binding ElementName=CalcProcess}"
 			 Unloaded="UserControl_Unloaded" 
 			PreviewKeyDown="UserControl_PreviewKeyDown"
-			 KeyDown="UserControl_KeyDown">
-
+			 KeyDown="UserControl_KeyDown"
+	>
+	<!--FontSize="12"
+					  Height="250"
+			Width="180"
+	-->
 	<UserControl.Resources>
 		<Style TargetType="Button">
-			<Setter Property="FontSize" Value="24" />
-			<Setter Property="MinHeight" Value="32" />
+			<Setter Property="FontSize" Value="18" />
+			<Setter Property="MinHeight" Value="24" />
 			<Setter Property="Foreground" Value="Black" />
-			<Setter Property="Margin" Value="2" />
+			<Setter Property="Margin" Value="1" />
 			<Setter Property="VerticalAlignment" Value="Stretch" />
 			<Setter Property="HorizontalAlignment" Value="Stretch" />
 		</Style>
@@ -28,7 +29,7 @@
 			<Border Name="border"
                     BorderThickness="1"
                     BorderBrush="DarkGray"
-                    CornerRadius="5"
+                    CornerRadius="3"
                     TextBlock.Foreground="Black">
 				<ContentPresenter VerticalAlignment="Center"
                                   HorizontalAlignment="Center" />
@@ -59,11 +60,11 @@
 
 	<Grid>
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="23*" />
-			<ColumnDefinition Width="23*"/>
-			<ColumnDefinition MinWidth="45" Width="46*" />
-			<ColumnDefinition MinWidth="45" Width="46*" />
-			<ColumnDefinition MinWidth="45"  Width="46*" />
+			<ColumnDefinition Width="20*" />
+			<ColumnDefinition Width="20*"/>
+			<ColumnDefinition Width="40*" />
+			<ColumnDefinition Width="40*" />
+			<ColumnDefinition Width="40*" />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions >
 			<RowDefinition Height="Auto"/>
@@ -75,43 +76,46 @@
 			<RowDefinition/>
 		</Grid.RowDefinitions>
 
-		<StackPanel Orientation="Horizontal"
-							HorizontalAlignment="Stretch"  VerticalAlignment="Top"
-							Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5">
-		</StackPanel>
 		<Label x:Name="CalcResult" 
-						Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4"
+						Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
 						VerticalAlignment="Top" HorizontalAlignment="Stretch"
-						MinWidth="150"
-						FontSize="18"/>
-		<!--
-						Content="{Binding CResult ,Mode=TwoWay}"-->
+						FontSize="14"
+						/>
+		<!--						Content="{Binding ResultStr ,Mode=TwoWay}"
+		-->
 		<DataGrid x:Name="CalcProgress" 
-							Grid.Row="0" Grid.Column="4"
+							Grid.Row="0" Grid.Column="3"  Grid.ColumnSpan="2" Grid.RowSpan="2"
+							MaxHeight="60"
 							HeadersVisibility="None"
 							AutoGenerateColumns="True"
 							ColumnWidth="SizeToCells"
 							 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
 							HorizontalAlignment="Right" 
 							HorizontalContentAlignment="Stretch"
-							MaxHeight="60"
 							CanUserAddRows ="False" 
 							CanUserReorderColumns="True"
 							SelectedCellsChanged="CalcProgress_SelectedCellsChanged" 
 							CellEditEnding="CalcProgress_CellEditEnding" 
 							>
+			<!---->
+
 		</DataGrid>
 
-		<StackPanel Orientation="Horizontal" HorizontalAlignment="Right"
-							Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5">
-			<Label x:Name="CalcOperation" Content="" Margin="10,0,5,0"/>
+		<StackPanel Orientation="Horizontal" 
+							Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3">
+			<Label x:Name="CalcOperation" Content="+" Margin="2,0,2,0"
+						FontSize="12" Padding="0"
+						/>
 			<TextBox x:Name="CalcProcess"
 							HorizontalAlignment="Stretch"
-							FontSize="18" MinWidth="260" IsReadOnly="True" 
+							FontSize="12"  Padding="0"
+							IsReadOnly="True" 
+							BorderThickness="0"
 							/>
-			<!--	 Text="{Binding CInput ,Mode=TwoWay}"	Content="{Binding process ,Mode=TwoWay}"-->
+			<!--		Text="{Binding InputStr ,Mode=TwoWay}"	-->
 		</StackPanel>
-		<Button x:Name="ClearBt" Content="C&#xa;BackSpace"  FontSize="12"
+		<!--Content="C&#xa;BackSpace"-->
+		<Button x:Name="ClearBt" Content="C" FontSize="18"
 					Grid.Row="2" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
 					Click="ClearBt_Click" Grid.ColumnSpan="2">
@@ -179,8 +183,8 @@
 					Template="{StaticResource Calcbutton}"
 					Click="ThreeBt_Click"  />
 		<!--Command="{Binding ThreeClick}"-->
-
-		<Button x:Name="ClearAllBt" Content="CE&#xa;Delete"  FontSize="12"
+		<!--Content="CE&#xa;Delete"  FontSize="12"-->
+		<Button x:Name="ClearAllBt" Content="CE"  FontSize="18"
 					Grid.Row="6" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
 					Click="ClearAllBt_Click" Grid.ColumnSpan="2"
