--- a/uitest/calc/CalcTest/CS_Calculator/CS_CalculatorControl.xaml
+++ b/uitest/calc/CalcTest/CS_Calculator/CS_CalculatorControl.xaml
@@ -59,60 +59,71 @@
 	</UserControl.Resources>
 
 	<Grid>
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="20*" />
-			<ColumnDefinition Width="20*"/>
+		<!--<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="40*" />
-			<ColumnDefinition Width="40*" />
-			<ColumnDefinition Width="40*" />
-		</Grid.ColumnDefinitions>
+			<ColumnDefinition/>
+		</Grid.ColumnDefinitions>-->
 		<Grid.RowDefinitions >
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
-			<RowDefinition />
-			<RowDefinition />
-			<RowDefinition />
-			<RowDefinition />
-			<RowDefinition />
-			<RowDefinition/>
+			<RowDefinition Height="*"/>
 		</Grid.RowDefinitions>
 
 		<Label x:Name="CalcResult" 
-						Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5"
-						VerticalAlignment="Top" HorizontalAlignment="Stretch"
-						FontSize="14"
+						Grid.Row="0" Grid.Column="0"
+						VerticalAlignment="Top"
+						FontSize="18"
 						/>
 		<!--						Content="{Binding ResultStr ,Mode=TwoWay}"
 		-->
-		<StackPanel Orientation="Horizontal"  Height="16"
-							Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4">
+		<Grid Name="ProsessGrid"
+				Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4"
+				>
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="20*" />
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="18" />
+			</Grid.ColumnDefinitions>
+			<Grid.RowDefinitions >
+				<RowDefinition Height="Auto"/>
+			</Grid.RowDefinitions>
 			<Label x:Name="CalcOperation" Content="+" Margin="2,0,2,0"
-						FontSize="12" Padding="0"
+					Grid.Row="0" Grid.Column="0" 
+					FontSize="12" Padding="0"
 						/>
 			<TextBox x:Name="CalcProcess"
+					Grid.Row="0" Grid.Column="1" 
 							HorizontalAlignment="Stretch"
+							TextAlignment="Right"
 							FontSize="12"  Padding="0"
 							MinWidth="90"
 							IsReadOnly="True" 
 							BorderThickness="0"
 							/>
 			<!--		Text="{Binding InputStr ,Mode=TwoWay}"	-->
-		</StackPanel>
-		<!--Content="C&#xa;BackSpace"-->
-		<Button Name="CorpBt"
-						Grid.Row="1" Grid.Column="5" 
+			<!--<StackPanel Orientation="Horizontal"  Height="16">
+			</StackPanel>-->
+			<Button Name="CorpBt"
+						Grid.Row="0" Grid.Column="2" 
 						MinHeight="6"
 						Content="▼"
 						FontSize="8" Click="CorpBt_Click"
 				/>
+		</Grid>
 		<DataGrid x:Name="CalcProgress" 
-							Grid.Row="2" Grid.Column="0"  Grid.ColumnSpan="5" 
-							MaxHeight="60"
+							Grid.Row="2" Grid.Column="0"  Grid.ColumnSpan="3" 
 							HeadersVisibility="None"
 							AutoGenerateColumns="True"
 							ColumnWidth="SizeToCells"
-							 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+						
+							MaxHeight="152"
+							MaxWidth="157"
+							HorizontalAlignment="Stretch"
+							VerticalAlignment="Stretch"
+							HorizontalContentAlignment="Right"
+							ScrollViewer.HorizontalScrollBarVisibility="Visible"
+							ScrollViewer.VerticalScrollBarVisibility="Visible"
 							CanUserAddRows ="False" 
 							CanUserReorderColumns="True"
 							SelectedCellsChanged="CalcProgress_SelectedCellsChanged" 
@@ -120,110 +131,130 @@
 							>
 		</DataGrid>
 		<!--
-										HorizontalAlignment="Right" 
-							HorizontalContentAlignment="Stretch"
+					HorizontalAlignment="Right" 
+									HorizontalContentAlignment="Stretch"
 				Grid.Row="0" Grid.Column="3"  Grid.ColumnSpan="2" Grid.RowSpan="2"
 		
 		<ComboBox x:Name="CalcProcessCB"
 							Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="5"
 							Height="20"
 							IsEditable="True"/>-->
-		<Button x:Name="ClearBt" Content="C" FontSize="18"
-					Grid.Row="3" Grid.Column="0"
+		<Grid Name="KeyGrid"
+				Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4"
+				HorizontalAlignment="Stretch"
+				VerticalAlignment="Stretch"
+				>
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="40*" />
+				<ColumnDefinition Width="40*" />
+				<ColumnDefinition Width="40*" />
+				<ColumnDefinition Width="40*" />
+			</Grid.ColumnDefinitions>
+			<Grid.RowDefinitions >
+				<RowDefinition Height="40*"/>
+				<RowDefinition Height="40*"/>
+				<RowDefinition Height="40*"/>
+				<RowDefinition Height="40*"/>
+				<RowDefinition Height="40*"/>
+				<RowDefinition Height="*"/>
+				<RowDefinition/>
+			</Grid.RowDefinitions>
+			<!--Content="C&#xa;BackSpace"-->
+			<Button x:Name="ClearBt" Content="C" FontSize="18"
+					Grid.Row="0" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
-					Click="ClearBt_Click" Grid.ColumnSpan="2">
+					Click="ClearBt_Click">
 		</Button>
 		<!--Command="{Binding ClearClick}"-->
 		<Button x:Name="SlashBt" Content="/" 
-					Grid.Row="3" Grid.Column="2" FontSize="14"
+					Grid.Row="0" Grid.Column="1" FontSize="14"
 					Template="{StaticResource Calcbutton}"
 					Click="SlashBt_Click"  />
 		<!--Command="{Binding SlashClick}"-->
 		<Button x:Name="AsteriskBt" Content="*" 
-					Grid.Row="3" Grid.Column="3"
+					Grid.Row="0" Grid.Column="2"
 					Template="{StaticResource Calcbutton}"
 					Click="AsteriskBt_Click"  />
 		<!--Command="{Binding AsteriskClick}"-->
 		<Button x:Name="MinusBt" Content="-" 
-					Grid.Row="3" Grid.Column="4"
+					Grid.Row="0" Grid.Column="3"
 					Template="{StaticResource Calcbutton}"
 					Click="MinusBt_Click" />
 		<!--Command="{Binding MinusClick}"-->
 
 		<Button x:Name="SevenBt" Content="7" 
-					Grid.Row="4" Grid.Column="0"
+					Grid.Row="1" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
-					Click="SevenBt_Click" Grid.ColumnSpan="2"  />
+					Click="SevenBt_Click" />
 		<!--Command="{Binding SevenClick}"-->
 		<Button x:Name="EightBt" Content="8" 
-					Grid.Row="4" Grid.Column="2"
+					Grid.Row="1" Grid.Column="1"
 					Template="{StaticResource Calcbutton}"
 					Click="EightBt_Click"  />
 		<!--Command="{Binding EightClick}"-->
 		<Button x:Name="NineBt" Content="9" 
-					Grid.Row="4" Grid.Column="3"
+					Grid.Row="1" Grid.Column="2"
 					Template="{StaticResource Calcbutton}"
 					Click="NineBt_Click"  />
 		<!--Command="{Binding NineClick}"-->
 		<Button x:Name="FourBt" Content="4" 
-					Grid.Row="5" Grid.Column="0"
+					Grid.Row="2" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
-					Click="FourBt_Click" Grid.ColumnSpan="2"  />
+					Click="FourBt_Click" />
 		<!--Command="{Binding FourBtClick}"-->
 		<Button x:Name="FiveBt" Content="5" 
-					Grid.Row="5" Grid.Column="2"
+					Grid.Row="2" Grid.Column="1"
 					Template="{StaticResource Calcbutton}"
 					Click="FiveBt_Click"  />
 		<!--Command="{Binding FiveClick}"-->
 		<Button x:Name="SixBt" Content="6" 
-					Grid.Row="5" Grid.Column="3"
+					Grid.Row="2" Grid.Column="2"
 					Template="{StaticResource Calcbutton}"
 					Click="SixBt_Click"  />
 		<!--Command="{Binding SixClick}"-->
 
 		<Button x:Name="OneBt" Content="1" 
-					Grid.Row="6" Grid.Column="0"
+					Grid.Row="3" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
-					Click="OneBt_Click" Grid.ColumnSpan="2"  />
+					Click="OneBt_Click"/>
 		<!--Command="{Binding OneBtClick}"-->
 		<Button x:Name="TwoBt" Content="2" 
-					Grid.Row="6" Grid.Column="2"
+					Grid.Row="3" Grid.Column="1"
 					Template="{StaticResource Calcbutton}"
 					Click="TwoBt_Click"  />
 		<!--Command="{Binding TwoClick}"-->
 		<Button x:Name="ThreeBt" Content="3" 
-					Grid.Row="6" Grid.Column="3"
+					Grid.Row="3" Grid.Column="2"
 					Template="{StaticResource Calcbutton}"
 					Click="ThreeBt_Click"  />
 		<!--Command="{Binding ThreeClick}"-->
 		<!--Content="CE&#xa;Delete"  FontSize="12"-->
 		<Button x:Name="ClearAllBt" Content="CE"  FontSize="18"
-					Grid.Row="7" Grid.Column="0"
+					Grid.Row="4" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
-					Click="ClearAllBt_Click" Grid.ColumnSpan="2"
-					/>
+					Click="ClearAllBt_Click"	/>
 		<Button x:Name="ZeroBt" Content="0" 
-					Grid.Row="7" Grid.Column="2"
+					Grid.Row="4" Grid.Column="1"
 					Template="{StaticResource Calcbutton}"
 					Click="ZeroBt_Click" />
 		<!--Command="{Binding ZeroClick}"-->
 		<Button x:Name="PeriodBt" Content="." 
-					Grid.Row="7" Grid.Column="3"
+					Grid.Row="4" Grid.Column="2"
 					Template="{StaticResource Calcbutton}"
 					Click="PeriodBt_Click"  />
 		<!--Command="{Binding PeriodClick}"-->
 
 		<Button x:Name="PlusBt" Content="+" 
 					Template="{StaticResource Calcbutton}"
-					Grid.Row="4" Grid.Column="4" Grid.RowSpan="2"
+					Grid.Row="1" Grid.Column="3" Grid.RowSpan="2"
 					Click="PlusBt_Click"  />
 		<!--Command="{Binding PlusClick}"-->
-		<Button x:Name="EnterBt" Content="Enter"  FontSize="12"
-					Grid.Row="6" Grid.Column="4" Grid.RowSpan="2"
+		<Button x:Name="EnterBt" Content="Enter"  FontSize="11"
+					Grid.Row="3" Grid.Column="3" Grid.RowSpan="2"
 					Template="{StaticResource Calcbutton}"
 				Click="EnterBt_Click"  />
 		<!--Command="{Binding PlusClick}"-->
-
+		</Grid>
 	</Grid>
 
 </UserControl>
