確定値リストの行追加（確定値の切り分け）と削除

--- a/uitest/calc/CalcTest/CS_Calculator/CS_CalculatorControl.xaml
+++ b/uitest/calc/CalcTest/CS_Calculator/CS_CalculatorControl.xaml
@@ -132,6 +132,13 @@
 							SelectedCellsChanged="CalcProgress_SelectedCellsChanged" 
 							CellEditEnding="CalcProgress_CellEditEnding" 
 							>
+			<DataGrid.ContextMenu>
+				<ContextMenu>
+					<MenuItem Header="分割" Click="ProgressItemSepareat"/>
+					<MenuItem Header="消去" Click="ProgressItemDelete"/>
+			</ContextMenu>
+			</DataGrid.ContextMenu>
+
 		</DataGrid>
 		<!--
 					HorizontalAlignment="Right" 
