--- a/uitest/calc/CalcTest/CS_Calculator/CS_CalculatorControl.xaml
+++ b/uitest/calc/CalcTest/CS_Calculator/CS_CalculatorControl.xaml
@@ -145,8 +145,15 @@
 			<RowDefinition Height="*"/>
 		</Grid.RowDefinitions>
 
-		<Label x:Name="CalcResult" 
+		<Label x:Name="NowOperations" 
 						Grid.Row="0" Grid.Column="0"
+						VerticalAlignment="Top"
+						FontSize="11"
+						Margin="0"
+						Padding="0"
+						/>
+		<Label x:Name="CalcResult" 
+						Grid.Row="1" Grid.Column="0"
 						VerticalAlignment="Top"
 						FontSize="14"
 						/>
@@ -156,7 +163,7 @@
 		<!--<StackPanel Orientation="Horizontal"  Grid.Row="1"  Height="16">
 		</StackPanel>Grid.Column="0" Grid.ColumnSpan="3"-->
 		<Grid Name="ProsessGrid"
-				Grid.Row="1" 
+				Grid.Row="2" 
 				>
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="15" />
@@ -169,13 +176,13 @@
 			</Grid.RowDefinitions>
 			<Label x:Name="CalcOperation" Content="+" Margin="2,0,2,0"
 					Grid.Row="0" Grid.Column="0" Padding="0"
-					FontSize="12" 
+					FontSize="11" 
 					Background="#FFFBF6C1" 
 					>
 			</Label>
 			<TextBox x:Name="CalcProcess"
 					Grid.Row="0" Grid.Column="1" 
-					FontSize="12"  Padding="0"
+					FontSize="11"  Padding="0"
 					HorizontalAlignment="Stretch"		
 					IsReadOnly="True" 
 					BorderThickness="0" Grid.ColumnSpan="2"
@@ -189,7 +196,7 @@
 				/>
 		</Grid>
 		<DataGrid x:Name="CalcProgress" 
-							Grid.Row="2" Grid.Column="0"  Grid.ColumnSpan="3" 
+							Grid.Row="3" Grid.Column="0"  Grid.ColumnSpan="3" 
 							HeadersVisibility="None"
 							AutoGenerateColumns="False"
 							CellStyle="{StaticResource StyleForDataCell}"
@@ -214,12 +221,12 @@
 
 			<DataGrid.Columns>
 				<DataGridTextColumn Header="none" Binding="{Binding Operater}"/>
-				<DataGridTextColumn Header="none" Binding="{Binding Value}"/>
+				<DataGridTextColumn Header="none" Binding="{Binding Value}" Width="*"/>
 			</DataGrid.Columns>
 		</DataGrid>
 
 			<Grid Name="KeyGrid"
-				Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3"
+				Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3"
 				HorizontalAlignment="Stretch"
 				VerticalAlignment="Stretch"
 				>
@@ -257,22 +264,30 @@
 					<ColumnDefinition Width="40*" />
 					<ColumnDefinition Width="40*" />
 					<ColumnDefinition Width="40*" />
+					<ColumnDefinition Width="40*" />
+					<ColumnDefinition Width="40*" />
 				</Grid.ColumnDefinitions>
 				<Grid.RowDefinitions >
 					<RowDefinition Height="16" />
 				</Grid.RowDefinitions>
-				<Button x:Name="PowerBt" Content="^" 
+				<ComboBox x:Name="MemoryComb" 
 					FontSize="10" 
 					Grid.Row="0" Grid.Column="0"
-					Template="{StaticResource FuncButton}" 
-					Click="PowerBt_Click"
-					/>
-				<Button x:Name="SqrtBt" Content="√" 
+					Margin="2" 
+					SelectionChanged="MemoryComb_SelectionChanged" 
+
+					>
+					<ComboBox.ContextMenu>
+						<ContextMenu>
+							<MenuItem Header="削除" Click="MemoryItemDeleat"/>
+						</ContextMenu>
+					</ComboBox.ContextMenu>
+				</ComboBox>
+				<Button x:Name="MemorySaveBt" Content="MS" 
+					FontSize="10" 
 					Grid.Row="0" Grid.Column="1"
-					FontSize="8" 
-					Template="{StaticResource FuncButton}" 
-					Click="SqrtBt_Click"
-					 />
+					Template="{StaticResource FuncButton}" Click="MemorySaveBt_Click" 
+					/>
 				<Button x:Name="ParenBt" Content="("  
 					Grid.Row="0" Grid.Column="2" 
 						FontSize="8" 
@@ -284,6 +299,18 @@
 					FontSize="8" 
 					Template="{StaticResource FuncButton}" 
 					Click="ParenthesisBt_Click"
+					 />
+				<Button x:Name="PowerBt" Content="X²" 
+					FontSize="10" 
+					Grid.Row="0" Grid.Column="4"
+					Template="{StaticResource FuncButton}" 
+					Click="PowerBt_Click"
+					/>
+				<Button x:Name="SqrtBt" Content="²√ｘ" 
+					Grid.Row="0" Grid.Column="5"
+					FontSize="8" 
+					Template="{StaticResource FuncButton}" 
+					Click="SqrtBt_Click"
 					 />
 			</Grid>
 			<!--Content="C&#xa;BackSpace"-->
